force-app/main/default/objects/FundingAwardAmendment/FundingAwardAmendment.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>