force-app/main/default/objects/FundingAwardAmendment/fields/Acknowledge_change_to_phase_request__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_change_to_phase_request__c</fullName>
    <inlineHelpText>I acknowledge that this phase request will result in a change and I confirm that I have attached an accompanying Project Change Request.</inlineHelpText>
    <label>Acknowledge change to phase request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>