force-app/main/default/objects/FundingAwardAmendment/fields/Actual_PSO_Days_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_PSO_Days_Response_Time__c</fullName>
    <formula>Date_PSO_RAG_Rating_Applied__c - Date_Status_changed_to_In_PSO_Review__c -

(

FLOOR((Date_PSO_RAG_Rating_Applied__c   - Date_Status_changed_to_In_PSO_Review__c)/7)*2

+

IF(AND(WEEKDAY(Date_Status_changed_to_In_PSO_Review__c )=1, WEEKDAY(Date_PSO_RAG_Rating_Applied__c  )&lt;&gt;7),1,

IF(CASE(WEEKDAY(Date_Status_changed_to_In_PSO_Review__c ),1,8,WEEKDAY(Date_Status_changed_to_In_PSO_Review__c ))&gt;CASE(WEEKDAY(Date_PSO_RAG_Rating_Applied__c  ),1,8,WEEKDAY(Date_PSO_RAG_Rating_Applied__c )),2,

IF(OR (WEEKDAY(Date_PSO_RAG_Rating_Applied__c   )=7, WEEKDAY(Date_Status_changed_to_In_PSO_Review__c )=1),1,

IF(OR (WEEKDAY(Date_PSO_RAG_Rating_Applied__c   )=1, WEEKDAY(Date_Status_changed_to_In_PSO_Review__c )=7),2,

0)))))</formula>
    <label>Actual PSO Days Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>