force-app/main/default/objects/FundingAwardAmendment/fields/Additional_Comments_Where_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_Where_Relevant__c</fullName>
    <label>Additional Comments Where Relevant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>