force-app/main/default/objects/FundingAwardAmendment/fields/All_measure_types_included_in_phase__c.field-meta.xml
<CustomField>
    <fullName>All_measure_types_included_in_phase__c</fullName>
    <inlineHelpText>All measure types included in this phase, outlined in Section 3: PR Stock &amp; Measures&apos;, are compliant with Section 2.9 &apos;Eligible Measures&apos; in the Wave 3 Guidance.</inlineHelpText>
    <label>All measure types included in phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>