force-app/main/default/objects/FundingAwardAmendment/fields/Am_I_the_PSO__c.field-meta.xml
<CustomField>
    <fullName>Am_I_the_PSO__c</fullName>
    <description>TRUE if PSO Lead is the same as the running user</description>
    <formula>IF( $User.Id =  PSO_Lead__r.Id, TRUE, FALSE)</formula>
    <label>Am I the PSO?</label>
    <type>Checkbox</type>
</CustomField>