force-app/main/default/objects/FundingAwardAmendment/fields/Am_I_the_Scheme_Lead__c.field-meta.xml
<CustomField>
    <fullName>Am_I_the_Scheme_Lead__c</fullName>
    <description>TRUE if Scheme Lead is the same as the running user</description>
    <formula>IF( $User.Id = Scheme_Lead__r.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Am I the Scheme Lead?</label>
    <type>Checkbox</type>
</CustomField>