force-app/main/default/objects/FundingAwardAmendment/fields/Applicant_Lead_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Lead_Applicant_Name__c</fullName>
    <label>Applicant / Lead Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>