force-app/main/default/objects/FundingAwardAmendment/fields/Assurance_of_Prime_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Assurance_of_Prime_Contractor__c</fullName>
    <inlineHelpText>Assurance of Prime Contractor being signed-up in time for Phase</inlineHelpText>
    <label>Assurance of Prime Contractor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>