force-app/main/default/objects/FundingAwardAmendment/fields/Award_Change_Control_Request_Order__c.field-meta.xml
<CustomField>
    <fullName>Award_Change_Control_Request_Order__c</fullName>
    <label>Award Change Control Request Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>