force-app/main/default/objects/FundingAwardAmendment/fields/Capital_funding_change_return_to_DESNZ__c.field-meta.xml
<CustomField>
    <fullName>Capital_funding_change_return_to_DESNZ__c</fullName>
    <description>Please provide details if your requested capital funding has changed since the allocation provided to you and you wish to return funding to DESNZ (e.g. consortium member withdrawal, reduced scope of homes targeted etc.)</description>
    <label>Capital funding change &amp; return to DESNZ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>