force-app/main/default/objects/FundingAwardAmendment/fields/Carry_over_any_deviation_to_other_phases__c.field-meta.xml
<CustomField>
    <fullName>Carry_over_any_deviation_to_other_phases__c</fullName>
    <inlineHelpText>I am able to carry over any deviation to my Phase Request baseline into other phases, without an impact on overall project baselines or spend incurred forecasts with any financial Year.</inlineHelpText>
    <label>Carry over any deviation to other phases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>