force-app/main/default/objects/FundingAwardAmendment/fields/Cause_and_Impact_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Cause_and_Impact_of_Change__c</fullName>
    <label>Cause and Impact of Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>