force-app/main/default/objects/FundingAwardAmendment/fields/Change_Needed__c.field-meta.xml
<CustomField>
    <fullName>Change_Needed__c</fullName>
    <label>Change Needed</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>