force-app/main/default/objects/FundingAwardAmendment/fields/Change_Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Category__c</fullName>
    <label>Change Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green - Low Risk</fullName>
            </value>
            <value>
                <fullName>Amber/Green - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Amber - High Risk</fullName>
            </value>
            <value>
                <fullName>Red- Significantly High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>