force-app/main/default/objects/FundingAwardAmendment/fields/Change_Request_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Outcome__c</fullName>
    <label>Change Request Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approved_Declined</valueSetName>
    </valueSet>
</CustomField>