force-app/main/default/objects/FundingAwardAmendment/fields/Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>Change_Summary__c</fullName>
    <label>Change Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>