force-app/main/default/objects/FundingAwardAmendment/fields/Changes_to_Eligibility_Pathways_Why__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Eligibility_Pathways_Why__c</fullName>
    <description>What is changing in your use of the three Eligibility Pathways and why?</description>
    <label>Changes to Eligibility Pathways? Why?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>