force-app/main/default/objects/FundingAwardAmendment/fields/Changes_to_evidence_collection_method__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_evidence_collection_method__c</fullName>
    <description>What changes are there to the evidence that you will use and how it will be collected?</description>
    <label>Changes to evidence &amp; collection method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>