force-app/main/default/objects/FundingAwardAmendment/fields/Co_funding_capital_costsroll__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_capital_costsroll__c</fullName>
    <label>Co-funding capital costs</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Co_Funding_Capital_Spend__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>