force-app/main/default/objects/FundingAwardAmendment/fields/Co_funding_contributionroll__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_contributionroll__c</fullName>
    <label>Co-funding contribution</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Total_Co_Funding_Contribution__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>