force-app/main/default/objects/FundingAwardAmendment/fields/Co_funding_Funding_Spendroll__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Funding_Spendroll__c</fullName>
    <label>Co-funding Funding Spend</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Co_funding_Spend__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>