force-app/main/default/objects/FundingAwardAmendment/fields/Co_funding_spend__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_spend__c</fullName>
    <description>Change to co-funding spend for this FY.</description>
    <label>Co-funding Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>