force-app/main/default/objects/FundingAwardAmendment/fields/Co_funding_Spend_Variance_from_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Spend_Variance_from_Baseline__c</fullName>
    <formula>Total_Co_funding_Funding_Spend__c -   Phase_Baseline__r.Baseline_Total_Co_Funding_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Spend Variance from Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>