force-app/main/default/objects/FundingAwardAmendment/fields/Comply_with_A_A_policy_red_lines__c.field-meta.xml
<CustomField>
    <fullName>Comply_with_A_A_policy_red_lines__c</fullName>
    <inlineHelpText>GR declares will comply with A&amp;A policy red lines for the current FY/Project, where the specific phase presents breach of A&amp;A redlines</inlineHelpText>
    <label>Comply with A&amp;A policy red lines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>