force-app/main/default/objects/FundingAwardAmendment/fields/Confirm_all_key_project_roles__c.field-meta.xml
<CustomField>
    <fullName>Confirm_all_key_project_roles__c</fullName>
    <inlineHelpText>I confirm all key project roles, including the Primary Contractor conducting the scope of works for this phase, are in place and ready to start scope of works.</inlineHelpText>
    <label>Confirm all key project roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>