force-app/main/default/objects/FundingAwardAmendment/fields/Confirm_I_am_aware_of_payments_issued__c.field-meta.xml
<CustomField>
    <fullName>Confirm_I_am_aware_of_payments_issued__c</fullName>
    <inlineHelpText>I confirm that I am aware that payments will be issued by DESNZ up to two months after the drawdown submission date. Any work within this phase will progress on this basis.</inlineHelpText>
    <label>XConfirm I am aware of payments issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>