force-app/main/default/objects/FundingAwardAmendment/fields/Consortium_Applicants_Only__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Applicants_Only__c</fullName>
    <label>Consortium Applicants Only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>