force-app/main/default/objects/FundingAwardAmendment/fields/Could_DAS_support_mitigate_impact__c.field-meta.xml
<CustomField>
    <fullName>Could_DAS_support_mitigate_impact__c</fullName>
    <description>Could additional DAS support mitigate the need or impact of the proposed change?</description>
    <label>Could DAS support mitigate impact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>