force-app/main/default/objects/FundingAwardAmendment/fields/Current_estimated_A_A_cost_of_project__c.field-meta.xml
<CustomField>
    <fullName>Current_estimated_A_A_cost_of_project__c</fullName>
    <description>Current estimated Admin and Ancillary cost of project</description>
    <label>Current estimated A&amp;A cost of project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>