force-app/main/default/objects/FundingAwardAmendment/fields/Current_estimated_Capital_cost__c.field-meta.xml
<CustomField>
    <fullName>Current_estimated_Capital_cost__c</fullName>
    <description>Current estimated Capital cost of project</description>
    <label>Current estimated Capital cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>