force-app/main/default/objects/FundingAwardAmendment/fields/Current_estimated_total_cost_of_project__c.field-meta.xml
<CustomField>
    <fullName>Current_estimated_total_cost_of_project__c</fullName>
    <label>Current estimated total cost of project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>