force-app/main/default/objects/FundingAwardAmendment/fields/Current_forecast_of_homes_to_be_upgraded__c.field-meta.xml
<CustomField>
    <fullName>Current_forecast_of_homes_to_be_upgraded__c</fullName>
    <description>Current projected forecast of total number of homes to be upgraded</description>
    <label>Current forecast of homes to be upgraded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>