force-app/main/default/objects/FundingAwardAmendment/fields/DAS_Support_Utilized_Provide_a_summary__c.field-meta.xml
<CustomField>
    <fullName>DAS_Support_Utilized_Provide_a_summary__c</fullName>
    <label>DAS Support Utilized? Provide a summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>