force-app/main/default/objects/FundingAwardAmendment/fields/Date_DESNZ_RAG_Rating_Applied__c.field-meta.xml
<CustomField>
    <fullName>Date_DESNZ_RAG_Rating_Applied__c</fullName>
    <label>Date DESNZ RAG Rating Applied</label>
    <type>Date</type>
</CustomField>