force-app/main/default/objects/FundingAwardAmendment/fields/Date_Lead_PSO_RAG_Rating_Applied__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_PSO_RAG_Rating_Applied__c</fullName>
    <label>Date Lead PSO RAG Rating Applied</label>
    <type>Date</type>
</CustomField>