force-app/main/default/objects/FundingAwardAmendment/fields/Date_Lead_PSO_RAG_Status_Applied_DELETE__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_PSO_RAG_Status_Applied_DELETE__c</fullName>
    <label>Date Lead PSO RAG Status Applied DELETE</label>
    <type>Date</type>
</CustomField>