force-app/main/default/objects/FundingAwardAmendment/fields/Date_of_project_completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_project_completion__c</fullName>
    <label>Date of project completion</label>
    <type>Date</type>
</CustomField>