force-app/main/default/objects/FundingAwardAmendment/fields/Date_Status_changed_to_In_PSO_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_changed_to_In_PSO_Review__c</fullName>
    <description>Updated via automation when the Status is changed to &quot;In PSO Review&quot; so the SLA day counters can begin.</description>
    <label>Date Status changed to In PSO Review</label>
    <type>Date</type>
</CustomField>