force-app/main/default/objects/FundingAwardAmendment/fields/Days_remaining_to_inform_GR__c.field-meta.xml
<CustomField>
    <fullName>Days_remaining_to_inform_GR__c</fullName>
    <formula>7-((5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Date_Status_changed_to_In_PSO_Review__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Date_Status_changed_to_In_PSO_Review__c - DATE( 1900, 1, 8), 7 ) ) ))</formula>
    <inlineHelpText>Days remaining to inform GR whether approved, green or escalated.</inlineHelpText>
    <label>Days remaining to inform GR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>