force-app/main/default/objects/FundingAwardAmendment/fields/Days_taken_to_review_DELETE__c.field-meta.xml
<CustomField>
    <fullName>Days_taken_to_review_DELETE__c</fullName>
    <formula>Date_PSO_RAG_Rating_Applied__c - DATEVALUE( CreatedDate )</formula>
    <label>Days taken to review DELETE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>