force-app/main/default/objects/FundingAwardAmendment/fields/Declaration_homes_are_suitable_for_KPI1__c.field-meta.xml
<CustomField>
    <fullName>Declaration_homes_are_suitable_for_KPI1__c</fullName>
    <inlineHelpText>I confirm that all homes in this phase are suitable for retrofit (KPI1); i.e. have completed retrofit assessments and a confirmed EPC rating.</inlineHelpText>
    <label>Declaration homes are suitable for KPI1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>