force-app/main/default/objects/FundingAwardAmendment/fields/Declaration_homes_are_suitable_for_KPI2__c.field-meta.xml
<CustomField>
    <fullName>Declaration_homes_are_suitable_for_KPI2__c</fullName>
    <inlineHelpText>I confirm that all homes included in this phase are ready for installations to start (KPI2), which includes securing 100% of resident sign-ups.</inlineHelpText>
    <label>Declaration homes are suitable for KPI2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>