force-app/main/default/objects/FundingAwardAmendment/fields/Declaration_of_all_eligibility__c.field-meta.xml
<CustomField>
    <fullName>Declaration_of_all_eligibility__c</fullName>
    <label>Declaration of all eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>