force-app/main/default/objects/FundingAwardAmendment/fields/Declaration_Prim_Contractor_signed__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Prim_Contractor_signed__c</fullName>
    <label>Declaration Prim Contractor signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>