force-app/main/default/objects/FundingAwardAmendment/fields/Delivery_Forecast_Plan__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Forecast_Plan__c</fullName>
    <description>only select this option with explicit instruction from DESNZ</description>
    <label>Delivery Forecast Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>