force-app/main/default/objects/FundingAwardAmendment/fields/delivery_team_and_key_roles_all_in__c.field-meta.xml
<CustomField>
    <fullName>delivery_team_and_key_roles_all_in__c</fullName>
    <inlineHelpText>GR confirms delivery team and key roles all in place to deliver Phase</inlineHelpText>
    <label>Delivery team and key roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>