force-app/main/default/objects/FundingAwardAmendment/fields/DESNZ_Amber_Amber_Green_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>DESNZ_Amber_Amber_Green_Days_Remaining__c</fullName>
    <formula>12-((5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Date_Status_changed_to_In_PSO_Review__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Date_Status_changed_to_In_PSO_Review__c - DATE( 1900, 1, 8), 7 ) ) ))</formula>
    <inlineHelpText>Counter begins only when &quot;Status&quot; is changed to &quot;In PSO Review&quot;.</inlineHelpText>
    <label>DESNZ - Amber/Amber Green Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>