force-app/main/default/objects/FundingAwardAmendment/fields/DESNZ_Approval__c.field-meta.xml
<CustomField>
    <fullName>DESNZ_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be completed by the relevant DESNZ representative once the Phase Request has been reviewed.</inlineHelpText>
    <label>DESNZ Approval</label>
    <type>Checkbox</type>
</CustomField>