force-app/main/default/objects/FundingAwardAmendment/fields/DESNZ_Approval_Contact__c.field-meta.xml
<CustomField>
    <fullName>DESNZ_Approval_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESNZ Approval Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>