force-app/main/default/objects/FundingAwardAmendment/fields/DESNZ_RAG_Rating_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>DESNZ_RAG_Rating_Applied_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESNZ RAG Rating Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>