force-app/main/default/objects/FundingAwardAmendment/fields/DESNZ_RAG_Rating_Justification__c.field-meta.xml
<CustomField>
    <fullName>DESNZ_RAG_Rating_Justification__c</fullName>
    <label>DESNZ RAG Rating Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>