force-app/main/default/objects/FundingAwardAmendment/fields/Energy_Savings__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings__c</fullName>
    <description>Change to Energy Savings for this FY.</description>
    <label>Energy Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>