force-app/main/default/objects/FundingAwardAmendment/fields/Energy_Savings_Variance_from_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_Variance_from_Baseline__c</fullName>
    <formula>Energy_Savings__c - Phase_Baseline__r.Energy_Savings_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Savings Variance from Baseline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>