force-app/main/default/objects/FundingAwardAmendment/fields/Energy_Savingsroll__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savingsroll__c</fullName>
    <label>Energy Savings</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Energy_Savings__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>