force-app/main/default/objects/FundingAwardAmendment/fields/EPC_A_B_Declaration__c.field-meta.xml
<CustomField>
    <fullName>EPC_A_B_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPC A or B Declaration</label>
    <type>Checkbox</type>
</CustomField>