force-app/main/default/objects/FundingAwardAmendment/fields/Est_total_project_capital_costs_on_gas__c.field-meta.xml
<CustomField>
    <fullName>Est_total_project_capital_costs_on_gas__c</fullName>
    <description>Estimated total project capital costs on gas LCH homes</description>
    <inlineHelpText>Estimated total project capital costs on gas LCH homes</inlineHelpText>
    <label>DELETE_ total project capital on gas LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>