force-app/main/default/objects/FundingAwardAmendment/fields/Funding_Award_Amendment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Amendment_Reference__c</fullName>
    <formula>FundingAward.FundingOpportunity.Funding_Scheme_Acronym__c  + &quot;-&quot; + IF(CONTAINS( FundingAward.Name , &quot; &quot;), LEFT(FundingAward.Name, FIND(&quot; &quot;, FundingAward.Name) - 1), FundingAward.Name)+ &quot;-FAA-&quot;+ MID(  Name  , 5, LEN(Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Award Amendment Reference</label>
    <type>Text</type>
</CustomField>