force-app/main/default/objects/FundingAwardAmendment/fields/Grant_funded_capital_costsroll__c.field-meta.xml
<CustomField>
    <fullName>Grant_funded_capital_costsroll__c</fullName>
    <label>Grant funded capital costs</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Grant_Capital_Spend__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>