force-app/main/default/objects/FundingAwardAmendment/fields/Grant_Funding_Spend__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Spend__c</fullName>
    <description>Change to grant funding spend for this FY.</description>
    <label>Grant Funding Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>