force-app/main/default/objects/FundingAwardAmendment/fields/Grant_Funding_Spendroll__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Spendroll__c</fullName>
    <label>Grant Funding Spend</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Grant_Funding_Spend__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>