force-app/main/default/objects/FundingAwardAmendment/fields/Grant_Funding_Variance_from_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Variance_from_Baseline__c</fullName>
    <formula>Grant_Funding_Spend__c -  Phase_Baseline__r.SP_Baseline_Grant_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Funding Variance from Baseline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>