force-app/main/default/objects/FundingAwardAmendment/fields/Homes_EPC_C_Variance_from_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Homes_EPC_C_Variance_from_Baseline__c</fullName>
    <formula>Total_homes_upgraded_to_EPC_C__c -  Phase_Baseline__r.No_of_Homes_to_EPC_C__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes EPC C Variance from Baseline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>