force-app/main/default/objects/FundingAwardAmendment/fields/Homes_Variance_from_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Homes_Variance_from_Baseline__c</fullName>
    <formula>Total_number_of_homes_to_be_upgraded__c -  Phase_Baseline__r.Total_Homes_to_be_Upgraded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes Variance from Baseline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>